# templates

c/: Makefile  README.md  config.mk
c-make/: .clang-format  .gitignore
c-make/include/: error.h
c-meson/: .clang-format  .gitignore  README.md  meson.build
c-meson/include/: error.h
c/source/: main.c
latex/: README.md  template.tex
